2026-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Switch to actions/checkout@v6

2025-05-11  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Simplify to r-ci with included bootstrap

2024-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch some URLs from http to https

2024-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/fastLm.cpp: Export compute functionas fastLm_impl
	* R/fastLm.R: Call generated wrapper fastLm_impl
	* src/init.c: Removed as RcppExports generates its content
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem

2023-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.13
        * configure.ac: Idem
        * configure: Idem

	* configure.ac: Remove 'AC_PROG_CC' to appease a CRAN email

2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.12
	* configure.ac: Idem
	* configure: Idem

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-03-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.11
	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.ucrt: Updated for RTools42

2021-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.10
	* configure.ac: Idem
	* configure: Idem

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards
	* configure: Idem
